--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,29 @@
 <resources>
     <string name="app_name">FarmStudio</string>
     <string name="state">(अपना राज्य चुनें)</string>
+    <string-array name="up">
+        <item>Select</item>
+        <item>Ghaziabad</item>
+        <item>Gorakpur</item>
+        <item>Vanaras</item>
+        <item>Allahabad</item>
+    </string-array>
+
+    <string-array name="jk">
+        <item>Select</item>
+        <item>Jammu</item>
+        <item>Srinagar</item>
+        <item>Katra</item>
+        <item>Himali</item>
+    </string-array>
+
+    <string-array name="rajasthan">
+        <item>Select</item>
+        <item>Jaipur</item>
+        <item>Jodhpur</item>
+        <item>Udaipur</item>
+        <item>Kota</item>
+    </string-array>
+
+
 </resources>
